Bug 484040 - Filters don't work
Summary: Filters don't work
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.0.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-03-20 04:51 UTC by Martin Tlustos
Modified: 2024-03-26 14:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Tlustos 2024-03-20 04:51:48 UTC
SUMMARY
***
I have two filters, one to hide completed tasks, and the other to hide everything unless it's active. Both don't do anything since 6.0
***


STEPS TO REPRODUCE
1. Create a filter that hides completed tasks
2. enable the filter in "view"
3. 

OBSERVED RESULT
Nothing happens

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Operating System: KDE neon 6.0
KDE Plasma Version: 6.0.2
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2
Kernel Version: 6.5.0-26-generic (64-bit)
Graphics Platform: Wayland
Processors: 6 × AMD Ryzen 5 4500U with Radeon Graphics
Memory: 15,0 GiB of RAM
Graphics Processor: AMD Radeon Graphics
Manufacturer: Acer
Product Name: Aspire A515-44G
System Version: V1.12
ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2024-03-22 10:03:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/korganizer/-/merge_requests/119
Comment 2 Bug Janitor Service 2024-03-22 14:23:44 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/eventviews/-/merge_requests/98
Comment 3 Daniel Vrátil 2024-03-25 08:02:08 UTC
Git commit fd6d6bd3d7c24b95a8d91b0233ada61a08658738 by Daniel Vrátil.
Committed on 22/03/2024 at 14:22.
Pushed by dvratil into branch 'release/24.02'.

Apply current view filter on the Todo model as well

Previously the Todo model was derived from ETMCalendar, which internally
had a CalFilterProxyModel to filter out incidences based on a CalFilter.
Nowadays we are building right on top of an ETM, so we need to apply the
filter manually.

It's a little hacky solution, but it is achieved by taking the current
filter from one of the active calendars and manually filtering each
Todo through it in the TodoViewSortFilterProxyModel.
FIXED-IN: 24.02.3

M  +9    -1    src/todo/todoview.cpp
M  +23   -2    src/todo/todoviewsortfilterproxymodel.cpp
M  +12   -0    src/todo/todoviewsortfilterproxymodel.h

https://invent.kde.org/pim/eventviews/-/commit/fd6d6bd3d7c24b95a8d91b0233ada61a08658738
Comment 4 Daniel Vrátil 2024-03-26 14:40:33 UTC
Git commit fe21a20a78587f6bf1c693a435028f8bf9964854 by Daniel Vrátil.
Committed on 26/03/2024 at 14:38.
Pushed by dvratil into branch 'release/24.02'.

Fix calendar view filters not being applied

Selecting a filter in View -> Filters did not apply cause the
filter to be applied to the individual CollectionCalendars,
only to the global ETMCalendar, which is not used as a source
of events, though.
FIXED-IN: 24.02.3

M  +26   -0    src/calendarview.cpp
M  +9    -0    src/calendarview.h

https://invent.kde.org/pim/korganizer/-/commit/fe21a20a78587f6bf1c693a435028f8bf9964854