Fix calendar view filters not being applied

Selecting a filter in View -> Filters did not apply cause the
filter to be applied to the individual CollectionCalendars,
only to the global ETMCalendar, which is not used as a source
of events, though.

BUG: 484040
FIXED-IN: 24.02.3